--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb://127.0.0.1/momentum" # Should be the connection URI for your MongoDB database.
+MONGO_URI="mongodb://127.0.0.1/aura" # Should be the connection URI for your MongoDB database.
 BOT_TOKEN="" # The token for your Discord bot.
 NAME="" # The name of your backend. Name it anything you want. Dont use special characters or spaces.
 GAME_SERVERS="127.0.0.1:8080:playlist_defaultsolo 192.168.178:7777:playlist_defaultsquad" # The IP addresses of your game servers. Separate them with spaces (" ") !IMPORTANT!
